postgres/src/v2_k8s/001a-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-deployment
  template:
    metadata:
      labels:
        app: postgres-deployment
    spec:
      containers:
      - name: postgres-deployment
        image: postgres:18.4-alpine3.24
        ports:
        - containerPort: 5432
