postgres/src/v2_k8s/002a-pgadmin4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4-deployment
  labels:
    app: pgadmin4-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin4-deployment
  template:
    metadata:
      labels:
        app: pgadmin4-deployment
    spec:
      containers:
        - name: pgadmin4-deployment
          image: dpage/pgadmin4:9.16
          ports:
            - containerPort: 80
