postgres/src/v2_k8s/001b-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  selector:
    component: postgres-deployment
  ports:
    - port: 5432
      targetPort: 5432
