postgres/src/v2_k8s/002b-pgadmin4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4-service
spec:
  type: ClusterIP
  selector:
    component: pgadmin4-deployment
  ports:
    - port: 80
      targetPort: 80
